fix crash when delete beacon,adjust new group.event page

--- a/app/src/main/res/layout/new_event_beacon_list_item.xml
+++ b/app/src/main/res/layout/new_event_beacon_list_item.xml
@@ -1,22 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/bPic"
-        android:layout_width="40dp"
-        android:layout_height="40dp" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="300dp"
+        android:layout_height="70dp">
 
-    <TextView
-        android:id="@+id/bName"
-        android:layout_width="200sp"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/bPic"
+            android:layout_width="37dp"
+            android:layout_height="37dp"
+            android:layout_marginLeft="38dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="242dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="19dp" />
+
+        <TextView
+            android:id="@+id/bName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="textView"
+            android:textSize="15sp"
+            android:layout_marginTop="24dp"
+            android:layout_marginLeft="103dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bName" />
+
+    </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
