--- a/app/src/main/res/layout/activity_add_new_beacon.xml
+++ b/app/src/main/res/layout/activity_add_new_beacon.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/white"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <TextView
@@ -26,7 +26,7 @@
             android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:text="新增物品"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimary"
             android:textSize="15dp" />
         </android.support.v7.widget.Toolbar>
 
