--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -3,94 +3,65 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#fff"
     android:orientation="vertical">
-    <LinearLayout
+
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="8.5"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <LinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="6.5"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/x" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:orientation="horizontal">
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="New Event"
-                android:gravity="center"
-                android:textColor="#426EB4"
-                android:textSize="20sp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="6.5"
-            android:orientation="horizontal">
-
-
-            <Button
-                android:id="@+id/button_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/check" />
-        </LinearLayout>
-    </LinearLayout>
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:text="新增活動"
+                android:textColor="@color/colorPrimary"
+                android:textSize="15dp" />
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="7"
-        android:background="#272727"
+        android:layout_height="153dp"
         android:orientation="horizontal">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="164dp"
 
             >
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/pic_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                app:srcCompat="@drawable/group_pic1" />
 
-                <ImageView
-                    android:id="@+id/imageView_cPic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    app:srcCompat="@drawable/key" />
-            </LinearLayout>
-
-            <Button
+            <ImageButton
                 android:id="@+id/buttonChangePic"
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_weight="1"
+                android:layout_width="37dp"
+                android:layout_height="37dp"
+                android:background="@drawable/img_camera3x"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="11dp"
+                android:layout_marginStart="11dp"
+                android:layout_marginBottom="20dp" />
 
-                android:background="@android:drawable/ic_menu_camera" />
         </RelativeLayout>
 
     </LinearLayout>
@@ -103,8 +74,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -117,24 +87,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="10dp">
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Event Name" />
+                    android:text="活動名稱"
+                    android:textSize="18dp"/>
 
                 <EditText
                     android:id="@+id/editText_cName"
-                    android:layout_width="260dp"
+                    android:layout_width="298dp"
                     android:layout_height="wrap_content"
                     android:ems="10"
-
-                    android:hint="ex:Date"
-                    android:inputType="textPersonName"
-                    android:maxWidth="150dp"
+                    android:maxWidth="160dp"
                     android:textSize="15sp" />
 
             </LinearLayout>
@@ -143,8 +111,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="6.5"
+            android:layout_height="39dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -166,52 +133,20 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
 
-                    android:text="Add Items Into This Event" />
+                    android:text="加入物品"
+                    android:textSize="18dp"/>
+
             </LinearLayout>
+
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="6.3"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal"></LinearLayout>
-
-            <SearchView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.1" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/editText2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="textPersonName"
-                    android:hint="Search By Item's Name"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:orientation="horizontal"></LinearLayout>
-
-        </LinearLayout>
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:background="#70203c70"
+            android:orientation="horizontal" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -220,63 +155,27 @@
 
             android:orientation="vertical">
 
-            <ListView
-                android:id="@+id/listview_newEvent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:orientation="horizontal">
-
-            <HorizontalScrollView
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/button3"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/name"
-                        android:text="Button"
-                        android:textSize="10sp" />
+                    <ListView
+                        android:id="@+id/listview_newEvent"
+                        android:layout_width="368dp"
+                        android:layout_height="510dp"
+                        tools:layout_editor_absoluteX="8dp"
+                        tools:layout_editor_absoluteY="37dp" />
 
-                    <Button
-                        android:id="@+id/button2"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/name"
-                        android:text="key"
-                        android:textSize="10sp" />
                 </LinearLayout>
-            </HorizontalScrollView>
+
+            </ScrollView>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_gravity="center"
-
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-
-                android:text="2 Items" />
-        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
