--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -1,51 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-    android:id="@+id/RelativeLayout01"
-    android:layout_width="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="130dp"
-    android:paddingBottom="4dip"
-    android:paddingLeft="12dip">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="300dp"
+        android:layout_height="70dp">
 
-    <CheckBox
-        android:id="@+id/MyAdapter_CheckBox_checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:clickable="true"
-        android:focusable="false"
-        android:minHeight="?android:attr/listPreferredItemHeight"
-        android:orientation="vertical" />
+        <CheckBox
+            android:id="@+id/MyAdapter_CheckBox_checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="false"
+            android:minHeight="?android:attr/listPreferredItemHeight"
+            android:orientation="vertical"
+            android:layout_marginLeft="252dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="3dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
-    <ImageView
-        android:id="@+id/pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/pic"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="31dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/sym_def_app_icon" />
 
-        ></ImageView>
-
-
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="30dip"
-        android:layout_below="@+id/pic"
-        android:orientation="vertical"></TextView>
-
-    <!--<TextView-->
-    <!--android:id="@+id/text2"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_width="fill_parent"-->
-    <!--android:layout_toRightOf="@+id/pic"-->
-    <!--android:layout_below="@+id/name"-->
-
-    <!--&gt;</TextView>-->
-
-</RelativeLayout>
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="15sp"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="24dp"
+            android:layout_marginRight="-179dp"
+            app:layout_constraintLeft_toRightOf="parent"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintHorizontal_bias="0.51" />
+    </android.support.constraint.ConstraintLayout>
+</LinearLayout>
