--- a/app/src/main/res/layout/notification_dialog.xml
+++ b/app/src/main/res/layout/notification_dialog.xml
@@ -55,10 +55,10 @@
 
 
                     <TextView
-                        android:id="@+id/datetitle"
+                        android:id="@+id/DateTimeTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="The Date : "
+                        android:text="Time:"
                         android:textSize="@dimen/notification_title"
                         android:textColor="@color/notification_title"/>
                     <LinearLayout
@@ -74,7 +74,7 @@
                             android:layout_weight="0.5" />
 
                         <Button
-                            android:id="@+id/buttonDatefrom"
+                            android:id="@+id/buttonDateTimefrom"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
@@ -101,7 +101,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5" />
                         <Button
-                            android:id="@+id/buttonDateto"
+                            android:id="@+id/buttonDateTimeto"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
@@ -119,73 +119,73 @@
                     </LinearLayout>
 
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/timetitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="The Time : "
-                        android:textSize="@dimen/notification_title"
-                        android:textColor="@color/notification_title"
-                        />
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="horizontal"
-                        android:weightSum="5">
-                        <Space
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.5" />
-                        <Button
-                            android:id="@+id/buttonTimefrom"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.5"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginLeft="3dp"
-                            android:layout_marginRight="3dp"
-                            android:text="start"
-                            android:background="@drawable/button_border"
-                            />
-                        <Space
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.5" />
-                        <TextView
-                            android:id="@+id/text2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="2"
-                            android:gravity="center"
-                            android:text="~" />
-                        <Space
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.5" />
-                        <Button
-                            android:id="@+id/buttonTimeto"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.5"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginLeft="3dp"
-                            android:layout_marginRight="3dp"
-                            android:text="end"
-                            android:background="@drawable/button_border"
-                            android:clickable="false"/>
-                        <Space
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.5" />
-                    </LinearLayout>
-                </LinearLayout>
+                <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:orientation="horizontal">-->
+                    <!--<TextView-->
+                        <!--android:id="@+id/timetitle"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="The Time : "-->
+                        <!--android:textSize="@dimen/notification_title"-->
+                        <!--android:textColor="@color/notification_title"-->
+                        <!--/>-->
+                    <!--<LinearLayout-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:gravity="center"-->
+                        <!--android:orientation="horizontal"-->
+                        <!--android:weightSum="5">-->
+                        <!--<Space-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_weight="0.5" />-->
+                        <!--<Button-->
+                            <!--android:id="@+id/buttonTimefrom"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_weight="0.5"-->
+                            <!--android:layout_marginTop="5dp"-->
+                            <!--android:layout_marginBottom="5dp"-->
+                            <!--android:layout_marginLeft="3dp"-->
+                            <!--android:layout_marginRight="3dp"-->
+                            <!--android:text="start"-->
+                            <!--android:background="@drawable/button_border"-->
+                            <!--/>-->
+                        <!--<Space-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_weight="0.5" />-->
+                        <!--<TextView-->
+                            <!--android:id="@+id/text2"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_weight="2"-->
+                            <!--android:gravity="center"-->
+                            <!--android:text="~" />-->
+                        <!--<Space-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_weight="0.5" />-->
+                        <!--<Button-->
+                            <!--android:id="@+id/buttonTimeto"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_weight="0.5"-->
+                            <!--android:layout_marginTop="5dp"-->
+                            <!--android:layout_marginBottom="5dp"-->
+                            <!--android:layout_marginLeft="3dp"-->
+                            <!--android:layout_marginRight="3dp"-->
+                            <!--android:text="end"-->
+                            <!--android:background="@drawable/button_border"-->
+                            <!--android:clickable="false"/>-->
+                        <!--<Space-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_weight="0.5" />-->
+                    <!--</LinearLayout>-->
+                <!--</LinearLayout>-->
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
