--- a/app/src/main/res/menu/group_menu.xml
+++ b/app/src/main/res/menu/group_menu.xml
@@ -3,10 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_action_refresh"
+        android:orderInCategory="0"
+        android:title="refresh"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_inform"
         android:icon="@drawable/about"
         android:orderInCategory="0"
-        android:showAsAction="ifRoom"
-        android:title="new item"
+        android:title="infrom"
         app:showAsAction="always" />
+
 </menu>
