--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,82 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back_pic"
     tools:context="com.example.emily.beaconside.Login">
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
         android:layout_width="176dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="104dp"
         android:layout_gravity="center_horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/google_login"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintVertical_bias="0.658"
         app:layout_constraintTop_toBottomOf="@+id/login"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintLeft_creator="1" />
 
 
-
-    <ImageView
-        android:id="@+id/app_icon"
-        android:layout_width="180dp"
-        android:layout_height="170dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@mipmap/ic_launcher"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintHorizontal_bias="0.497" />
-
-    <Button
-        android:id="@+id/google_login"
-        android:layout_width="176dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/google_login"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fb_login"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
-
     <TextView
         android:id="@+id/textView"
-        android:layout_width="101dp"
-        android:layout_height="24dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:text="or Sign in with"
         android:textAlignment="center"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/google_login"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login"
-        app:layout_constraintVertical_bias="0.608"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
 
     <EditText
         android:id="@+id/account_input"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/account_input"
@@ -87,17 +45,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_icon"
-        app:layout_constraintVertical_bias="0.111"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
 
     <EditText
         android:id="@+id/pwd_input"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="23dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:ems="10"
         android:inputType="numberPassword"
         android:visibility="gone"
@@ -117,15 +71,16 @@
         android:layout_height="48dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/loginbutton"
         android:fontFamily="sans-serif"
-        android:text="@string/login"
+        android:text="SIGN IN"
         android:textColor="@android:color/background_light"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.586"
+        app:layout_constraintVertical_bias="0.693"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintLeft_creator="1" />
 
@@ -133,12 +88,6 @@
         android:id="@+id/forgiveAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="@string/forgiveAccount"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -152,12 +101,6 @@
         android:id="@+id/joinMember"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="@string/addMemeber"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -169,14 +112,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="100dp"
-        android:layout_height="1dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#000000"
         android:orientation="horizontal"
         android:visibility="gone"
@@ -189,14 +126,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="100dp"
-        android:layout_height="1dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#000000"
         android:orientation="horizontal"
         android:visibility="gone"
@@ -212,12 +143,24 @@
         android:id="@+id/btn_friends"
         android:layout_width="130dp"
         android:layout_height="57dp"
-        android:layout_marginRight="234dp"
+        android:layout_marginRight="363dp"
         android:text="friendsList"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="248dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="472dp" />
+        android:layout_marginTop="645dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="210dp"
+        android:layout_height="154dp"
+        app:srcCompat="@drawable/new_logo"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/login"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.816" />
+
 
 
 </android.support.constraint.ConstraintLayout>
