--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -137,7 +137,7 @@ android:orientation="horizontal">
         android:layout_weight="1"
 
         android:background="@drawable/button_solid_orange"
-        android:text="  I FOUND IT！"
+        android:text="  CLOSE  "
         android:textColor="@android:color/white" />
 
 </LinearLayout>
