--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -98,7 +98,7 @@ android:orientation="horizontal">
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text='   Searching For '
+            android:text="搜尋"
             android:textColor="@color/colorAccent"
 
             android:textSize="18sp" />
@@ -133,11 +133,11 @@ android:orientation="horizontal">
         android:layout_height="50dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:onClick="onBackPressed"
         android:layout_weight="1"
-
         android:background="@drawable/button_solid_orange"
-        android:text="  CLOSE  "
+
+        android:onClick="onBackPressed"
+        android:text="  關閉 "
         android:textColor="@android:color/white" />
 
 </LinearLayout>
