--- a/app/src/main/res/layout/activity_add_member_to_group.xml
+++ b/app/src/main/res/layout/activity_add_member_to_group.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context="com.example.emily.beaconside.MainActivity">
+    android:background="@color/white">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -17,30 +16,22 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/white"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:theme="@style/ToolbarColoredBackArrow">
 
             <TextView
+                android:id="@+id/groupTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center"
-                android:text="Belonging"
+                android:text="新增成員"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp" />
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:tintMode="add"
-        app:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@drawable/ic_action_add" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -50,24 +41,11 @@
         android:paddingTop="?attr/actionBarSize"
         android:weightSum="1">
 
-        <include
-            layout="@layout/content_main"
+        <ListView
+            android:id="@+id/listView_memberlist"
             android:layout_width="match_parent"
-            android:layout_height="358dp"
-            android:layout_weight="0.53" />
+            android:layout_height="match_parent" />
 
-        <Button
-            android:id="@+id/checkItem"
-            android:layout_width="200dp"
-            android:layout_height="45dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="30dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/button_round_orange"
-            android:onClick="checkItem"
-            android:text="檢查所有物品"
-            android:textAlignment="center"
-            android:textColor="@color/colorAccent" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
