--- a/app/src/main/res/layout/activity_add_new_beacon.xml
+++ b/app/src/main/res/layout/activity_add_new_beacon.xml
@@ -59,7 +59,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="@+id/editTextbName"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.3" />
+            app:layout_constraintVertical_bias="0.355" />
 
         <!--name-->
         <EditText
@@ -69,7 +69,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="Device name"
+            android:hint="物品名稱"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -106,8 +106,8 @@
         <!--description-->
         <EditText
             android:id="@+id/editTextbContent"
-            android:layout_width="290dp"
-            android:layout_height="39dp"
+            android:layout_width="288dp"
+            android:layout_height="44dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
@@ -116,13 +116,15 @@
             android:layout_marginTop="8dp"
             android:layout_weight="0.3"
             android:ems="10"
-            android:hint="the description..."
+            android:hint="敘述..."
             android:inputType="textMultiLine"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.893" />
+            app:layout_constraintVertical_bias="0.893"
+            tools:layout_editor_absoluteY="112dp"
+            tools:layout_editor_absoluteX="9dp" />
 
         <ImageButton
             android:id="@+id/buttonChangePic"
@@ -132,7 +134,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp"
-            android:layout_marginLeft="-20dp"
+            android:layout_marginLeft="-57dp"
             android:layout_marginStart="8dp" />
 
     </android.support.constraint.ConstraintLayout>
@@ -179,7 +181,7 @@
                     android:layout_marginTop="14dp"
                     android:layout_weight="0.2"
                     android:gravity="center"
-                    android:text="Event"
+                    android:text="活動"
                     android:textColor="@color/title"
                     android:textSize="@dimen/titleText"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -274,7 +276,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_weight="0.2"
                     android:gravity="center"
-                    android:text="Group"
+                    android:text="群組"
                     android:textColor="@color/title"
                     android:textSize="@dimen/titleText"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -376,7 +378,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_weight="0.2"
                     android:gravity="center"
-                    android:text="Alarm Mode"
+                    android:text="警報模式"
                     android:textColor="@color/title"
                     android:textSize="@dimen/titleText"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -409,31 +411,31 @@
                 <!--Alarm content-->
                 <TextView
                     android:id="@+id/textView9"
-                    android:layout_width="135dp"
-                    android:layout_height="50dp"
-                    android:paddingTop="11dp"
-                    android:paddingBottom="11dp"
-                    android:gravity="end"
-                    android:textSize="@dimen/alarm_text"
-                    android:textColor="@color/alarm_text"
-                    android:text="Warning when"
-                    android:layout_marginLeft="8dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginRight="8dp"
-                    app:layout_constraintHorizontal_bias="0.034"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_width="87dp"
+                    android:layout_height="48dp"
                     android:layout_marginBottom="8dp"
-                    app:layout_constraintTop_toTopOf="@+id/alarm"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintVertical_bias="1.0"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp" />
+                    android:layout_marginTop="8dp"
+                    android:gravity="end"
+                    android:paddingBottom="11dp"
+                    android:paddingTop="11dp"
+                    android:text="當距離超過"
+                    android:textColor="@color/alarm_text"
+                    android:textSize="@dimen/alarm_text"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.092"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/alarm"
+                    app:layout_constraintVertical_bias="1.0" />
 
                 <EditText
                     android:id="@+id/editTextMile"
                     android:layout_width="43dp"
-                    android:layout_height="41dp"
+                    android:layout_height="50dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
@@ -443,40 +445,40 @@
                     android:hint="0"
                     android:inputType="number"
                     android:paddingBottom="11dp"
-                    android:paddingTop="11dp"
+                    android:paddingTop="10dp"
                     android:textColor="@color/title"
                     android:textSize="@dimen/alarm_input"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.705"
+                    app:layout_constraintHorizontal_bias="0.556"
                     app:layout_constraintLeft_toLeftOf="@+id/textView9"
                     app:layout_constraintRight_toRightOf="@+id/textView2"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.829"
+                    app:layout_constraintVertical_bias="1.0"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp" />
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="75dp"
-                    android:layout_height="50dp"
-                    android:paddingTop="11dp"
-                    android:paddingBottom="11dp"
-                    android:gravity="start"
-                    android:textSize="@dimen/alarm_text"
-                    android:textColor="@color/alarm_text"
-                    android:text="m away"
+                    android:layout_height="48dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintHorizontal_bias="0.564"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintVertical_bias="1.0"
-                    app:layout_constraintLeft_toRightOf="@+id/textView9"
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp" />
+                    android:layout_marginTop="8dp"
+                    android:gravity="start"
+                    android:paddingBottom="11dp"
+                    android:paddingTop="11dp"
+                    android:text="公尺遠"
+                    android:textColor="@color/alarm_text"
+                    android:textSize="@dimen/alarm_text"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.256"
+                    app:layout_constraintLeft_toRightOf="@+id/textView9"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="1.0" />
             </android.support.constraint.ConstraintLayout>
 
             <!--line-->
@@ -511,7 +513,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_weight="0.2"
                     android:gravity="center"
-                    android:text="Notification"
+                    android:text="提醒"
                     android:textColor="@color/title"
                     android:textSize="@dimen/titleText"
                     app:layout_constraintBottom_toBottomOf="parent"
