--- a/app/src/main/res/layout/group_setting.xml
+++ b/app/src/main/res/layout/group_setting.xml
@@ -32,22 +32,91 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
+                android:padding="5dp"
                 android:background="@color/white">
 
 
+                <ImageView
+                    android:id="@+id/imageView_gPic"
+                    android:layout_width="58dp"
+                    android:layout_height="63dp"
+                    app:srcCompat="@drawable/group_pic1_s"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="6dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginStart="8dp" />
+
+                <TextView
+                    android:id="@+id/textView_gName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="群組名稱"
+                    android:textSize="16sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginLeft="13dp"
+                    app:layout_constraintLeft_toRightOf="@+id/imageView_gPic"
+                    android:layout_marginStart="13dp" />
             </android.support.constraint.ConstraintLayout>
+
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/white"
+                android:layout_weight="0.28">
+
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/constraintLayout_addBeacon"
+                    android:layout_width="378dp"
+                    android:layout_height="49dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/textView12"
+                        android:layout_width="139dp"
+                        android:layout_height="26dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_weight="1"
+                        android:text="增加共享物品"
+                        android:textSize="16sp"
+                        app:layout_constraintLeft_toRightOf="@+id/imageView6"
+                        android:layout_marginStart="8dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginTop="11dp" />
+
+                    <ImageView
+                        android:id="@+id/imageView6"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginTop="9dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/add_beacon"
+                        android:layout_marginLeft="32dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginStart="25dp" />
+                </android.support.constraint.ConstraintLayout>
+
+
+            </android.support.constraint.ConstraintLayout>
+
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -71,7 +140,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <android.support.constraint.ConstraintLayout
-                    android:id="@+id/constraintLayout3"
+                    android:id="@+id/constraintLayout_addMember"
                     android:layout_width="363dp"
                     android:layout_height="51dp"
                     android:layout_marginLeft="16dp"
@@ -87,20 +156,22 @@
                         android:layout_marginLeft="8dp"
                         android:layout_weight="1"
                         android:text="增加其他人"
-                        android:textSize="18sp"
-                        app:layout_constraintLeft_toRightOf="@+id/imageView5"
+                        android:textSize="16sp"
+                        app:layout_constraintLeft_toRightOf="@+id/imageView7"
                         android:layout_marginStart="8dp"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginTop="12dp" />
 
                     <ImageView
-                        android:id="@+id/imageView5"
-                        android:layout_width="39dp"
-                        android:layout_height="35dp"
-                        app:srcCompat="@drawable/add_user"
-                        tools:layout_editor_absoluteX="0dp"
+                        android:id="@+id/imageView7"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginTop="8dp"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginTop="8dp" />
+                        app:srcCompat="@drawable/add_user"
+                        android:layout_marginLeft="8dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginStart="8dp" />
                 </android.support.constraint.ConstraintLayout>
 
                 <android.support.v7.widget.RecyclerView
@@ -108,13 +179,13 @@
                     android:layout_width="364dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintHeight_default="wrap"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout_addMember" />
 
             </android.support.constraint.ConstraintLayout>
-
         </LinearLayout>
     </ScrollView>
 
