--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center"
-                android:text="Belonging"
+                android:text="Belongings"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp" />
         </android.support.v7.widget.Toolbar>
@@ -49,6 +49,34 @@
         android:orientation="vertical"
         android:paddingTop="?attr/actionBarSize"
         android:weightSum="1">
+
+        <LinearLayout
+            android:id="@+id/updateInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.53"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="上次更新時間："
+                android:textAlignment="textEnd" />
+
+            <TextView
+                android:id="@+id/lastTime"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textAlignment="textStart" />
+        </LinearLayout>
 
         <include
             layout="@layout/content_main"
