--- a/app/src/main/res/layout/main_side.xml
+++ b/app/src/main/res/layout/main_side.xml
@@ -1,13 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="280dp"
+    android:layout_height="match_parent"
     android:background="@drawable/side_content_bg"
     android:orientation="vertical">
 
     <!--上層-->
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="238dp"
+            android:layout_height="39dp"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:paddingBottom="8dp"
+            android:text="Hi"
+            android:textAlignment="center"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userPicture" />
+
+        <ImageView
+            android:id="@+id/userPicture"
+            android:layout_width="376dp"
+            android:layout_height="116dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/add" />
+
+        <ImageView
+            android:id="@+id/imageView_home"
+            android:layout_width="28dp"
+            android:layout_height="34dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintHorizontal_bias="0.051"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/home" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,27 +66,7 @@
         android:orientation="vertical">
 
         <!--使用者頭貼和資訊-->
-        <ImageView
-            android:id="@+id/userPicture"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/add" />
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="1dp"
-            android:layout_marginStart="24dp"
-            android:paddingBottom="8dp"
-            android:text="Hi"
-            android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:textSize="18sp"
-            android:textStyle="bold" />
     </LinearLayout>
 
     <!--下層-->
@@ -49,7 +78,7 @@
         <!--選單/分類-->
         <!--android:background="@drawable/side_title_bg"-->
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="252dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
@@ -71,11 +100,10 @@
                 android:id="@+id/side_class_bt"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:background="@drawable/folder1"
-                android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp"
-                />
+                android:layout_marginStart="40dp"
+                android:layout_weight="0.5"
+                android:background="@drawable/folder1" />
             <!--android:backgroundTint="@drawable/side_title_bg"-->
         </LinearLayout>
 
@@ -90,8 +118,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
-                android:weightSum="1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -107,6 +135,7 @@
                         app:srcCompat="@color/colorPrimary" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
